# nopeak-utils

./: .gitignore  Dockerfile  README.md  build_container.sh  data.dvc  filter_snps_by_motifs.py  jaspar.dvc  motif_and_asb.ipynb  other_tfs.dvc  prototype.ipynb  pyproject.toml  rsids.dvc  tf_list.ipynb  v1_ctcf_snps.csv
.dvc/: config
ctcf/: .gitignore  asb.dvc  data.dvc
genome/: .gitignore  hg19.fa.bz2.dvc  hg19.fa.bz2.fai.dvc  hg19.fa.bz2.gzi.dvc
nopeak_utils/: motifutils.py  nopeak.py  scores.py
