[tool.poetry]
name = "nopeak-utils"
version = "0.1.0"
description = "Utility functions for parsing the output from nopeak"
authors = ["Øyvind Almelid <oyvind.almelid@igmm.ed.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gimmemotifs = "^0.17.0"
ttp = "^0.7.1"
numpy = "^1.21.3"
dask = "^2021.10.0"
memory-tempfile = "^2.2.3"
tfomics = {git = "ssh://git@git.ecdf.ed.ac.uk/oalmelid/tfomics.git"}
coreapi = "^2.3.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pylint = "^2.9.3"
mypy = "^0.910"
ipykernel = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
