[tool.poetry]
name = "nopeak-utils"
version = "0.1.0"
description = "A collection of scripts and packages for downstream motif analysis"
authors = ["s2223108 <b.j.roskams-hieter@sms.ed.ac.uk>"]
packages = [{include = "nopeak_utils"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
ttp = "^0.9.1"
dask = "^2022.10.2"
memory-tempfile = "^2.2.3"
coreapi = "^2.3.3"
tfomics = {version = "^0.3.2", source = "gitlab"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
flake8 = "^5.0.4"
pylint = "^2.15.5"
mypy = "^0.990"
ipykernel = "^6.17.1"
dvc = "^2.31.0"

[[tool.poetry.source]]
name = "gitlab"
url = "https://git.ecdf.ed.ac.uk/api/v4/projects/9635/packages/pypi/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
